CHANGED AND ADDED THE CONTACT PHONE

--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@
     <div class="text-center">
       <h2 class="section-heading"><span class="highlight-orange">Get in Touch with CoreInU</span></h2>
       <h3 class="section-subheading">Serving Washington DC, Maryland, and Northern Virginia</h3>
+      <p class="mt-2">
+        <i class="fas fa-phone-alt"></i> Want to talk now? Call us: (202) 642-7951
+      </p>
     </div>
 
     <form id="contactForm" action="https://formspree.io/f/xeokwddn" method="POST">
